--- a/AngularTest-Frontend/Dockerfile
+++ b/AngularTest-Frontend/Dockerfile
@@ -24,4 +24,4 @@ COPY . /app
 EXPOSE 4200
 
 # start app
-CMD ng serve --host 0.0.0.0
+CMD ng serve --host 0.0.0.0 --port 80 --disable-host-check true 
